--- a/Phase_B/gptalk-backend/package.json
+++ b/Phase_B/gptalk-backend/package.json
@@ -13,6 +13,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.0.5",
     "dotenv": "^16.3.1",
@@ -21,6 +22,7 @@
     "express-winston": "^4.2.0",
     "helmet": "^7.1.0",
     "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.13",
     "redis": "^4.6.12",
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
@@ -29,10 +31,12 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "@types/nodemailer": "^6.4.15",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/yamljs": "^0.2.34",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
