--- a/Phase_B/gptalk-frontend/package.json
+++ b/Phase_B/gptalk-frontend/package.json
@@ -32,13 +32,14 @@
     "@angular/compiler": "^17.3.8",
     "@angular/core": "^17.3.8",
     "@angular/forms": "^17.3.8",
-    "@angular/material": "^17.3.8",
     "@angular/platform-browser": "^17.3.8",
     "@angular/platform-browser-dynamic": "^17.3.8",
     "@angular/router": "^17.3.8",
     "@ngneat/until-destroy": "^10.0.0",
     "ngx-pipes": "^3.2.2",
     "ngx-toastr": "^18.0.0",
+    "primeflex": "^3.3.1",
+    "primeng": "^17.18.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "^0.14.3"
