--- a/Phase_B/gptalk-frontend/package.json
+++ b/Phase_B/gptalk-frontend/package.json
@@ -39,6 +39,7 @@
     "ngx-pipes": "^3.2.2",
     "ngx-toastr": "^18.0.0",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
