add login and jwt auth

--- a/Phase_B/gptalk-backend/package.json
+++ b/Phase_B/gptalk-backend/package.json
@@ -21,8 +21,12 @@
     "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
     "helmet": "^7.1.0",
+    "http-status": "^1.7.4",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.13",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "redis": "^4.6.12",
     "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.2",
@@ -37,6 +41,7 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.15",
+    "@types/passport-jwt": "^4.0.1",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/yamljs": "^0.2.34",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
