--- a/Phase_B/gptalk-frontend/package.json
+++ b/Phase_B/gptalk-frontend/package.json
@@ -36,6 +36,7 @@
     "@angular/platform-browser-dynamic": "^17.3.8",
     "@angular/router": "^17.3.8",
     "@ngneat/until-destroy": "^10.0.0",
+    "fastest-levenshtein": "^1.0.16",
     "ngx-pipes": "^3.2.2",
     "ngx-toastr": "^18.0.0",
     "primeflex": "^3.3.1",
