--- a/Phase_B/gptalk-frontend/package.json
+++ b/Phase_B/gptalk-frontend/package.json
@@ -37,6 +37,7 @@
     "@angular/router": "^17.3.8",
     "@ngneat/until-destroy": "^10.0.0",
     "fastest-levenshtein": "^1.0.16",
+    "lodash": "^4.17.21",
     "ngx-pipes": "^3.2.2",
     "ngx-toastr": "^18.0.0",
     "primeflex": "^3.3.1",
@@ -56,6 +57,7 @@
     "@angular/cli": "~17.3.7",
     "@angular/compiler-cli": "^17.3.8",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "cypress": "^13.9.0",
