--- a/Phase_B/gptalk-backend/package.json
+++ b/Phase_B/gptalk-backend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.13",
+    "openai": "^4.52.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "redis": "^4.6.12",
