--- a/Phase_B/gptalk-frontend/tsconfig.spec.json
+++ b/Phase_B/gptalk-frontend/tsconfig.spec.json
@@ -3,11 +3,15 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jest"
+      "jest",
+      "node"
     ]
   },
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
